--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -56,8 +56,8 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
-          <h2>Find your Business</h2>
-          <h3>We will help you to find the best business in any city in the world.</h3>
+          <h2>Find Business</h2>
+          <h3>We have critical information about Small Business all over US.</h3>
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
           <div class="justify-content-md-center">
