Safari Fix Google API fix Search Pagination

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -213,13 +213,8 @@
 </footer>
 </div>
 </body>
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBvuspZieDAMlpAVAe2qwlvkk8oQU34dtg&callback=initialize"></script> -->
+ <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc0CLCHpUtmyrQmfcEgESIy_OYVICHT6I&libraries=places"></script>
 
-<script>
-
-    </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAc0CLCHpUtmyrQmfcEgESIy_OYVICHT6I&libraries=places"
-        async defer></script>
 <!--    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA_hBkjJyRoMYVqN6DdM7E8mWTtDO-mVns&libraries=places"-->
 <!--            async defer></script>-->
 
