--- a/src/main/resources/static/resources/pages/myProfile.html
+++ b/src/main/resources/static/resources/pages/myProfile.html
@@ -44,26 +44,20 @@
                        </div>
                        <div class="form-group">
                          <label>Your Email</label>
-                         <input type="text" class="form-control form-control-lg" ng-model="profileDetails.emailId">
+                         <input type="text" class="form-control form-control-lg" ng-model="profileDetails.email">
                        </div>
                        <div class="row">
                          <div class="col-md-6">
                            <div class="form-group">
                              <label>Phone</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.contactNumber">
-                           </div>
-                         </div>
-                         <div class="col-md-6">
-                           <div class="form-group">
-                             <label>Fax</label>
-                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.fax">
+                             <input type="text" class="form-control form-control-lg" placeholder="" ng-model="profileDetails.phoneNumber">
                            </div>
                          </div>
                        </div>
-                       <div class="form-group">
-                         <label>About Me</label>
-                         <textarea class="form-control form-control-lg text-editor" placeholder="" ng-model="profileDetails.aboutAgent"></textarea>
-                       </div>
+<!--                       <div class="form-group">-->
+<!--                         <label>About Me</label>-->
+<!--                         <textarea class="form-control form-control-lg text-editor" placeholder="" ng-model="profileDetails.aboutAgent"></textarea>-->
+<!--                       </div>-->
                        <!-- <h3 class="subheadline">Social Links</h3>
                        <div class="form-group">
                          <label>Twitter</label>
