--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -40,7 +40,7 @@
                 <div class="clearfix"></div>
 
                 <div class="row item-listing grid">
-                    <div ng-repeat="prop in searchList track by $index" class="item col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-6" id="prop{{$index}}">
+                    <div ng-repeat="prop in searchList | startFrom:currentPage*itemsPerPage | limitTo:itemsPerPage" class="item col-xs-10 col-sm-10 col-md-10 col-lg-10 col-xl-6" id="prop{{$index}}">
                         <div class="item-image">
                             <a class="item-image" href="#businessDetails/{{prop.businessId}}">
                                 <img src="{{prop.imageFirst}}" style="width:400px;height:240px" class="img-fluid" alt="">
@@ -60,6 +60,42 @@
                             </a>
                         </div>
                     </div>
+                </div>
+                <div>
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination pg-blue justify-content-center" style="margin:10px">
+                            <li class="page-item"><a class="page-link" ng-click="currentPage=1">First</a></li>
+                            <li ng-class="currentPage <= 1 ? 'page-item disabled': 'page-item'">
+                                <a class="page-link" aria-label="Previous" ng-click="disablePrevious()">
+                                    <span aria-hidden="true">&laquo;</span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </li>
+                            <li class="page-item active"><a class="page-link" ng-click="currentPage=1">1</a></li>
+                            <li class="page-item"><a class="page-link" ng-click="currentPage=2">2</a></li>
+                            <li class="page-item"><a class="page-link" ng-click="currentPage=3">3</a></li>
+                            <li ng-class="currentPage >= numberOfPages ? 'page-item disabled': 'page-item'">
+                                <a class="page-link" aria-label="Next" ng-click="disableNext()">
+                                    <span aria-hidden="true">&raquo;</span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </li>
+                            <li class="page-item"><a class="page-link" ng-click="currentPage=numberOfPages">Last</a></li>
+
+                            <span style="margin:10px">
+                                Page {{currentPage}} / {{numberOfPages}}
+                            </span>
+
+                            <span style="margin:10px">
+                                View Per Page
+                                <select ng-model="viewby" ng-change="setItemsPerPage(viewby)">
+                                    <option>10</option><option>20</option><option>50</option><option>100</option><option>200</option>
+                                </select>
+                            </span>
+
+                        </ul>
+
+                    </nav>
                 </div>
 
                 <!--<div class="item-listing list">-->
