Show Pagination only when there are businesses from search results

--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div ng-if="searchList">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pg-blue justify-content-center" style="margin:10px">
                             <li class="page-item"><a class="page-link" ng-click="currentPage=1">First</a></li>
