--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -123,7 +123,7 @@
               <div class="col-md-2 col-lg-1 col-xl-1">
                 <label style="margin:0">Zipcode</label>
                 <input type="text" id="postal_code" name="businessZipcode" ng-model="businessZipcode" class="form-control"
-                       placeholder="94536">
+                       placeholder="">
               </div>
 
               <div class="col-md-2 col-lg-1 col-xl-1">
