--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -16,7 +16,7 @@
         <div class="search-results">
             <div class="search-results-list">
                 <div class="page-header">
-                    <h1>Property for rent near Fremont, CA</h1>
+                    <h1>Business near {{businessCity}}, {{businessState}}</h1>
                 </div>
                 <div class="sorting">
                   <div class="row justify-content-between">
