Added Copy Right and Trademark Symbols

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -223,6 +223,9 @@
       </div>
     </div>
   </div>
+  <div style="text-align:center;border:1px solid red;">
+    <h6 subheadline> &copy; 2020 Designed and Developed in California</h6>
+  </div>
 </footer>
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true" id="termsOfService">
     <div class="modal-dialog modal-full" role="document">
