--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -57,7 +57,7 @@
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
           <h2>Find Business</h2>
-          <h3>We have critical information about Small Business all over US.</h3>
+          <h3>We help you decide <b><i>RealWorth</i></b>&trade; of Business! Currently serving San Francisco - San Jose - Bay Area in California.</h3>
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
           <div class="justify-content-md-center">
