--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -56,8 +56,8 @@
     <div class="row justify-content-md-center">
       <div class="col-md-12 col-lg-12 col-xl-12 central-content">
         <div class="heading">
-          <h2>Find Business</h2>
-          <h3>We help you decide <b><i>RealWorth</i></b>&trade; of Business! Currently serving San Francisco - San Jose - Bay Area in California.</h3>
+          <h2>Find <i>RealWorth</i>&trade; of Business!</h2>
+	  <h6 style="color:#FF0000">Currently serving San Francisco - San Jose - Bay Area in California.</h6>
         </div>
         <form name="searchBusinessForm" ng-controller="homeController" ng-submit="submitted = true" novalidate>
           <div class="justify-content-md-center">
