Added User Activity Trackers to Search, Add Business and Subscribe or SearchAgent functions

--- a/src/main/resources/static/resources/pages/addListingForm.html
+++ b/src/main/resources/static/resources/pages/addListingForm.html
@@ -1,5 +1,5 @@
 <div class="page-header bordered">
-    <h1>Submit your Business <small>We've over 10k buyers!</small></h1>
+    <h1>Add details about your Business <small>We've many buyers interested in your Business!</small></h1>
 </div>
 <form name="addListingForm" ng-submit="submitted = true" novalidate>
     <div class="alert-danger" ng-show="submitted && addListingForm.$invalid">
