--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -1,4 +1,4 @@
-<div ng-include="'resources/pages/advanceFilterMenuBar.html'"></div>
+<!--<div ng-include="'resources/pages/advanceFilterMenuBar.html'"></div>-->
 
 <div class="map-listing">
   <div class="row no-gutters has-map fixed">
