--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -122,7 +122,7 @@
 }
 
 .svgImage {
-    background-image: url(http://www.nasa.gov/multimedia/videogallery/ajax-loader.gif);
+    background-image: url(https://www.nasa.gov/multimedia/videogallery/ajax-loader.gif);
     position: relative;
     z-index: 99;
     height: 65px;
@@ -271,10 +271,12 @@
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="lib/jquery-3.2.1.min.js"></script>
-<script src="lib/popper.min.js"></script>
+<!--<script src="lib/aos/aos.js"></script>-->
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/selectric/jquery.selectric.js"></script>
+<script src="lib/Magnific-Popup/jquery.magnific-popup.min.js"></script>
+<script src="lib/popper.min.js"></script>
+<script src="lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="lib/swiper/js/swiper.min.js"></script>
 <script src="lib/aos/aos.js"></script>
 <script src="lib/Magnific-Popup/jquery.magnific-popup.min.js"></script>
