--- a/src/main/resources/static/resources/pages/search.html
+++ b/src/main/resources/static/resources/pages/search.html
@@ -61,29 +61,37 @@
                         </div>
                     </div>
                 </div>
-                <div ng-if="searchList">
+                <div ng-if="searchList.length > 0">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination pg-blue justify-content-center" style="margin:10px">
-                            <li class="page-item"><a class="page-link" ng-click="currentPage=1">First</a></li>
-                            <li ng-class="currentPage <= 1 ? 'page-item disabled': 'page-item'">
+                            <li class="page-item"><a class="page-link" ng-click="changePage(1)">First</a></li>
+                            <li ng-class="currentPage + 1 <= 1 ? 'page-item disabled': 'page-item'">
                                 <a class="page-link" aria-label="Previous" ng-click="disablePrevious()">
                                     <span aria-hidden="true">&laquo;</span>
                                     <span class="sr-only">Previous</span>
                                 </a>
                             </li>
-                            <li class="page-item active"><a class="page-link" ng-click="currentPage=1">1</a></li>
-                            <li class="page-item"><a class="page-link" ng-click="currentPage=2">2</a></li>
-                            <li class="page-item"><a class="page-link" ng-click="currentPage=3">3</a></li>
-                            <li ng-class="currentPage >= numberOfPages ? 'page-item disabled': 'page-item'">
+                            <li class="page-item active">
+                                <a class="page-link" ng-click="changePage(1)">1</a>
+                            </li>
+                            <li ng-class="numberOfPages < 2 ? 'page-item disabled': 'page-item'">
+                                <a class="page-link" ng-click="changePage(2)">2</a>
+                            </li>
+                            <li ng-class="numberOfPages < 3 ? 'page-item disabled': 'page-item'">
+                                <a class="page-link" ng-click="changePage(3)">3</a>
+                            </li>
+                            <li ng-class="currentPage + 1 >= numberOfPages ? 'page-item disabled': 'page-item'">
                                 <a class="page-link" aria-label="Next" ng-click="disableNext()">
                                     <span aria-hidden="true">&raquo;</span>
                                     <span class="sr-only">Next</span>
                                 </a>
                             </li>
-                            <li class="page-item"><a class="page-link" ng-click="currentPage=numberOfPages">Last</a></li>
+                            <li class="page-item">
+                                <a class="page-link" ng-click="changePage(numberOfPages)">Last</a>
+                            </li>
 
                             <span style="margin:10px">
-                                Page {{currentPage}} / {{numberOfPages}}
+                                Page {{currentPage + 1}} / {{numberOfPages}}
                             </span>
 
                             <span style="margin:10px">
