--- a/src/main/resources/static/resources/pages/home.html
+++ b/src/main/resources/static/resources/pages/home.html
@@ -69,11 +69,12 @@
               </div>
 
               <div class="col-md-4 col-lg-3 col-xl-3">
-                <label style="margin:0">Business Type</label>
+                <label style="margin:0">Business Type*</label>
                 <select class="form-control" name="businessType" ng-init="businessType = businessType || businessTypes[0]"
-                        ng-model="businessType" ng-options="businessType.name for businessType in businessTypes" id="businessType">
+                        ng-model="businessType" ng-options="businessType.name for businessType in businessTypes" id="businessType" required>
 <!--                  <option style="color:#868e96;" value="">All</option>-->
                 </select>
+		<span style="color:red" ng-show="submitted && searchBusinessForm.businessType.$error.required">Business Type is required.</span>
               </div>
 
 <!--              <div class="col-md-5 col-lg-5 col-xl-5">-->
